# MF-ATTRIBUTION-ANALYSIS

./: .gitignore  calculate_returns.py  docker-compose.yml  inspect_db_data.py  inspect_xlsx_columns.py  inspect_xlsx_sheets.py  search_nifty_matches.py
backend/: .env.example  Dockerfile  alembic.ini  inspect_db.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/analytics/: __init__.py  attribution.py  metrics.py
backend/app/api/v1/: attribution.py  auth.py  benchmarks.py  copilot.py  funds.py  portfolios.py  reports.py  router.py  (+2 more)
backend/app/core/: __init__.py  exceptions.py  permissions.py  security.py
backend/app/crud/: __init__.py  attribution.py  base.py  benchmark.py  fund.py  portfolio.py  transaction.py  user.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  attribution_result.py  benchmark.py  fund.py  nav_history.py  portfolio.py  transaction.py  user.py
backend/app/schemas/: __init__.py  attribution.py  auth.py  benchmark.py  fund.py  portfolio.py  report.py  transaction.py  user.py
backend/app/tasks/: attribution_compute.py  celery_app.py  nav_ingestion.py  report_generation.py
backend/app/templates/: All_stocks_monthly_prices.csv  Expense ratio & fund manager.xlsx  Monthly Tracker - Flexi cap.xlsx
backend/app/utils/: csv_export.py  date_utils.py  nav_fetcher.py  pdf_export.py  risk_metrics.py  tracker_excel.py
backend/tests/: conftest.py  test_auth.py  test_portfolios.py
(+12 files in other folders)
